Added more javascript to link images to their appropriate galleries. Eventually need to either create pages for each gallery or figure out how to cycle through images on the page. Probably a loop with an array.

--- a/pastTrips.html
+++ b/pastTrips.html
@@ -51,41 +51,29 @@ Make the code clean! Keep your HTML, CSS and JavaScript properly indented.
 	<div id="gallery">
 		<div id="galleryContainer">
 			<div class="imageContainer">
-<!-- 				<a href="http://www.rallyaway.com/gallery/southwest" target="_blank" class="hvr-ripple-in">
- -->					<img  src="Images/Arches.jpg" id="southwest" class="images">
-
-<!-- 				</a> 
- -->			</div>
+				<img src="Images/Arches.jpg" id="southwest" class="images">
+			</div>
 
 			<div class="imageContainer">
-<!-- 				<a href="http://www.rallyaway.com/gallery/pnw" target="_blank" class="hvr-ripple-in">
- -->					<img src="Images/Haystack.jpg" id="northwest" class="images"> 
-<!-- 				</a>
- -->			</div>
+				<img src="Images/Haystack.jpg" id="northwest" class="images"> 
+			</div>
 
 			<div class="imageContainer">
-<!-- 				<a href="http://www.rallyaway.com/gallery/barntime" target="_blank" class="hvr-ripple-in"> 
- -->					<img src="Images/Barn.jpg" id="barntime" class="images"> 
-<!-- 				</a>
- -->			</div>
+				<img src="Images/Barn.jpg" id="barntime" class="images"> 
+			</div>
 
 			<div class="imageContainer">
-<!-- 				<a href="http://www.rallyaway.com/gallery/9000miles" target="_blank" class="hvr-ripple-in">
- -->					<img src="Images/WhiteSands.jpg" id="roadtrip" class="images">
-<!-- 				</a>
- -->			</div>
+				<img src="Images/WhiteSands.jpg" id="roadtrip" class="images">
+			</div>
 
 			<div class="imageContainer">
-<!-- 				<a href="http://www.rallyaway.com/gallery/rallybeacon" target="_blank" class="hvr-ripple-in">
- -->					<img src="Images/Beacon2.jpg" id="firstRally" class="images"> 
-<!-- 				</a>
- -->			</div>
+				<img src="Images/Beacon2.jpg" id="firstRally" class="images"> 
+			</div>
 
 			<div class="imageContainer">
-<!-- 				<a href="http://www.rallyaway.com/gallery/newport16" target="_blank" class="hvr-ripple-in">
- -->					<img src="Images/Newport.jpg" id="newport" class="images"> 
-<!-- 				</a>
- -->			</div>
+				<img src="Images/Newport.jpg" id="newport" class="images"> 
+			</div>
+
 		</div>
 	</div>
 
